--- a/Ballerina.toml
+++ b/Ballerina.toml
@@ -1,8 +1,8 @@
 [package]
-org = "xlibb"
-name = "jsonschema_validator"
+org = "sasindu"
+name = "jsonschema.validator"
 version = "0.1.0"
-distribution = "2201.11.0"
+distribution = "2201.12.0"
 
 [build-options]
 observabilityIncluded = true
