--- a/Dependencies.toml
+++ b/Dependencies.toml
@@ -5,12 +5,12 @@
 
 [ballerina]
 dependencies-toml-version = "2"
-distribution-version = "2201.11.0"
+distribution-version = "2201.12.0"
 
 [[package]]
 org = "ballerina"
 name = "io"
-version = "1.7.0"
+version = "1.8.0"
 dependencies = [
 	{org = "ballerina", name = "jballerina.java"},
 	{org = "ballerina", name = "lang.value"}
@@ -30,7 +30,7 @@ modules = [
 [[package]]
 org = "ballerina"
 name = "jballerina.java.arrays"
-version = "1.5.0"
+version = "1.6.0"
 dependencies = [
 	{org = "ballerina", name = "jballerina.java"}
 ]
@@ -84,7 +84,7 @@ dependencies = [
 [[package]]
 org = "ballerina"
 name = "observe"
-version = "1.4.0"
+version = "1.5.0"
 dependencies = [
 	{org = "ballerina", name = "jballerina.java"}
 ]
@@ -116,8 +116,8 @@ modules = [
 ]
 
 [[package]]
-org = "xlibb"
-name = "jsonschema_validator"
+org = "sasindu"
+name = "jsonschema.validator"
 version = "0.1.0"
 dependencies = [
 	{org = "ballerina", name = "io"},
@@ -127,7 +127,7 @@ dependencies = [
 	{org = "ballerinai", name = "observe"}
 ]
 modules = [
-	{org = "xlibb", packageName = "jsonschema_validator", moduleName = "jsonschema_validator"},
-	{org = "xlibb", packageName = "jsonschema_validator", moduleName = "jsonschema_validator.schema"}
+	{org = "sasindu", packageName = "jsonschema.validator", moduleName = "jsonschema.validator"},
+	{org = "sasindu", packageName = "jsonschema.validator", moduleName = "jsonschema.validator.schema"}
 ]
 
